// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPage .create passes options through to Markup 1`] = `
"<Fragment>
  <Disclaimer />
  TEST STRING
</Fragment>"
`;

exports[`ContentPage .create renders 1`] = `
"<Fragment>
  <Disclaimer />
  MY CONTENT
</Fragment>"
`;
